[package]
name = "fund_codes_project"
version = "0.1.0"
authors = ["birkin <birkin_diana@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
marc = "1.5.0"
# tokio = { version = "0.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
